feat: Upgrade Spring Boot to 3.5.14. Upgrade related dependencies too (#104)
* feat: Spring Boot upgrade from 2.7.18 to 3.3.13, plus upgrade of extra related dependencies - initial commit. Some CheckStyle errors/warns are fixed.

* fix: Migration module is fixed: WebApplicationType.NONE type is set for the application, dependencies to spring-boot-starter-web and spring-boot-starter-undertow are removed.

* fix: Java version is set to 21 in Maven and plugins configurations. org.openclover:clover-maven-plugin version is changed to 4.5.0. pom.xml files are cleansed.

* fix: antlr4-runtime and antlr4 plugin versions are set to 4.13.2, au.com.dius.pact.provider artifacts to 4.6.15, javers version to 7.9.0, kotlin to 1.9.25, jackson to 2.17.3, httpclient5 to 5.4.1, httpcore5 to 5.3.3, hibernate-core to 6.5.3.Final. Hibernate dialect is set to org.hibernate.dialect.PostgreSQLDialect.

* fix: Pact tests are fixed. Code is cleansed.

* fix: Unit tests are fixed. Hibernate aggregate queries results processing is fixed. 

* fix(security): Bump jackson to 2.18.6, httpclient5 to 5.4.3, commons-fileupload to 1.6.0, tika-core to 3.2.2. Improve dependency management of hazelcast dependencies.

* build: A new profile is added to turn off tests of MongoDb if it's unavailable.

* performance: DataSetListContextService#getCachedDataSetListContext: wrapping to HashSet is used to improve collection search operations.

* refactor: Replace org.apache.logging.log4j.util.Strings usages to org.apache.commons.lang3.StringUtils. Dependencies to org.apache.logging.log4j:log4j-api and org.apache.logging.log4j:log4j-core are commented.

* feat: Spring Boot upgrade to 3.5.11 is made.

* fix: Liquibase Analytics is disabled globally.

* fix(security): Bump netty to 4.1.132.Final, kafka-clients to 3.9.2.

* fix(deps): Bump httpclient5/httpcore5 to 5.4.4/5.3.4 to unify dependencies across services.

* fix: Mongo auto configurations are excluded from main SpringBootApplication.

* fix(security): Bump b