@@ -22,9 +22,7 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -36,8 +34,9 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.api.parallel.Isolated;
 import org.mockito.Mock;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
-
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 import org.qubership.atp.dataset.service.direct.ClearCacheService;
 import org.qubership.atp.dataset.service.jpa.DataSetServiceException;
 import org.qubership.atp.dataset.service.jpa.JpaAttributeService;
@@ -50,9 +49,12 @@ import org.qubership.atp.dataset.service.jpa.delegates.Parameter;
 import org.qubership.atp.ei.node.dto.ExportImportData;
 import org.qubership.atp.ei.node.dto.validation.ValidationType;
 import org.qubership.atp.ei.node.services.ObjectLoaderFromDiskService;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 
 @Isolated
 @ExtendWith(SpringExtension.class)
+@ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 public class DataSetParametersImporterTest {
 
     private ObjectLoaderFromDiskService objectLoaderFromDiskService;
@@ -81,7 +83,7 @@ public class DataSetParametersImporterTest {
 
     @Test
     public void validateDataSetParameters() {
-        Path workDir = Paths.get("src/test/resources/ei/import/1d554fe3-4a15-4e1c-964a-1585e3206209");
+        Path workDir = Path.of("src/test/resources/ei/import/1d554fe3-4a15-4e1c-964a-1585e3206209");
         when(dsService.getById(any())).thenReturn(null);
         List<String> result = dataSetParametersImporter.validateDataSetParameters(workDir,
                 Collections.emptyMap(), false);
@@ -93,8 +95,8 @@ public class DataSetParametersImporterTest {
     }
 
     @Test
-    public void importDataSetParameters_1() throws DataSetServiceException, IOException {
-        Path workDir = Paths.get("src/test/resources/ei/import/1d554fe3-4a15-4e1c-964a-1585e3206209");
+    public void importDataSetParameters_1() throws DataSetServiceException {
+        Path workDir = Path.of("src/test/resources/ei/import/1d554fe3-4a15-4e1c-964a-1585e3206209");
         when(attrService.getById(any())).thenReturn(null);
         when(attrService.getAttributeKeyById(any())).thenReturn(null);
         dataSetParametersImporter.importDataSetParameters(workDir, importData);
@@ -102,8 +104,8 @@ public class DataSetParametersImporterTest {
     }
 
     @Test
-    public void importDataSetParameters_2() throws DataSetServiceException, IOException {
-        Path workDir = Paths.get("src/test/resources/ei/import/1d554fe3-4a15-4e1c-964a-1585e3206209");
+    public void importDataSetParameters_2() throws DataSetServiceException {
+        Path workDir = Path.of("src/test/resources/ei/import/1d554fe3-4a15-4e1c-964a-1585e3206209");
         when(attrService.getById(any())).thenReturn(mock(Attribute.class));
         when(paramService.replicate(any(), any(), any(), any())).thenReturn(mock(Parameter.class));
         dataSetParametersImporter.importDataSetParameters(workDir, importData);
@@ -111,8 +113,8 @@ public class DataSetParametersImporterTest {
     }
 
     @Test
-    public void importDataSetParameters_21() throws DataSetServiceException, IOException {
-        Path workDir = Paths.get("src/test/resources/ei/import/1d554fe3-4a15-4e1c-964a-1585e3206209");
+    public void importDataSetParameters_21() throws DataSetServiceException {
+        Path workDir = Path.of("src/test/resources/ei/import/1d554fe3-4a15-4e1c-964a-1585e3206209");
         when(attrService.getById(any())).thenReturn(null);
         when(attrService.getAttributeKeyById(any())).thenReturn(mock(AttributeKey.class));
         when(paramService.replicate(any(), any(), any(), any())).thenReturn(mock(Parameter.class));
@@ -122,8 +124,8 @@ public class DataSetParametersImporterTest {
     }
 
     @Test
-    public void importDataSetParameters_22() throws DataSetServiceException, IOException {
-        Path workDir = Paths.get("src/test/resources/ei/import/1d554fe3-4a15-4e1c-964a-1585e3206209");
+    public void importDataSetParameters_22() throws DataSetServiceException {
+        Path workDir = Path.of("src/test/resources/ei/import/1d554fe3-4a15-4e1c-964a-1585e3206209");
         when(attrService.getById(any())).thenReturn(mock(Attribute.class));
         UUID absentAttributeId = UUID.fromString("1c80d1bd-614e-4b01-9def-9fb9b9e79518");
         when(attrService.getById(absentAttributeId)).thenReturn(null);
@@ -135,8 +137,8 @@ public class DataSetParametersImporterTest {
     }
 
     @Test
-    public void importDataSetParameters_3() throws DataSetServiceException, IOException {
-        Path workDir = Paths.get("src/test/resources/ei/import/1d554fe3-4a15-4e1c-964a-1585e3206209");
+    public void importDataSetParameters_3() throws DataSetServiceException {
+        Path workDir = Path.of("src/test/resources/ei/import/1d554fe3-4a15-4e1c-964a-1585e3206209");
         when(attrService.getById(any())).thenReturn(mock(Attribute.class));
         Parameter parameter = mock(Parameter.class);
         when(paramService.replicate(any(), any(), any(), any())).thenReturn(parameter);
@@ -151,8 +153,8 @@ public class DataSetParametersImporterTest {
     }
 
     @Test
-    public void importDataSetParameters_4() throws DataSetServiceException, IOException {
-        Path workDir = Paths.get("src/test/resources/ei/import/1d554fe3-4a15-4e1c-964a-1585e3206209");
+    public void importDataSetParameters_4() throws DataSetServiceException {
+        Path workDir = Path.of("src/test/resources/ei/import/1d554fe3-4a15-4e1c-964a-1585e3206209");
         when(attrService.getById(any())).thenReturn(mock(Attribute.class));
 
         Parameter existingParameter = mock(Parameter.class);
